frontend/react-app/Deployment-Service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: frontend:latest   # 🔥 your built image
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "300m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
           cpu: "300m"
            memory: "256Mi"
